# hjkl-buffer

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTERS.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
benches/: budgets.rs
src/: buffer.rs  edit.rs  folds.rs  lib.rs  motion.rs  position.rs  render.rs  search.rs  span.rs  viewport.rs
tests/: proptest_roundtrip.rs
