[package]
name = "hjkl-buffer"
description = "Rope-backed text buffer with cursor and edits. Pre-1.0 churn."
keywords = ["rope", "buffer", "text", "editor"]
categories = ["text-editors", "data-structures"]
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl-buffer"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[features]
default = []
ratatui = ["dep:ratatui"]

[dependencies]
ratatui = { version = "0.30", optional = true }
regex = "1"
unicode-width = "0.2"

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = [
  "cargo_bench_support",
] }
proptest = "1"

[[bench]]
name = "budgets"
harness = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
